fixed scroll overflow, scrolling to the end of the list of games no longer scrolls the entire page.

--- a/wwwroot/css/styles.css
+++ b/wwwroot/css/styles.css
@@ -303,9 +303,7 @@ footer {
 }
 
 .scrolloverflow {
-  /* overflow:auto;
-  height: 50%; */
-  /*margin:20px 20px 0px 20px;'*/
+  overscroll-behavior: contain;
   padding: var(--padding-none);
   padding-right: var(--padding-xs);
   height: 73vh;
@@ -321,8 +319,6 @@ footer {
   flex: 1;
   display: flex;
   flex-direction: column;
-  /* flex-flow: row wrap; */
-  /* height: 100vh; */
   transition: margin-left 0.3s ease, transform 0.3s ease;
 }
 
